# pdfCompress

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: windows-exe.yml
src/: main.cpp
